Contect section layout bug has been fixed

--- a/portfolio-app/src/app/globals.css
+++ b/portfolio-app/src/app/globals.css
@@ -67,7 +67,7 @@ section h4 {
   }
 }
 
-.navbar,
+nav,
 section,
 footer {
   padding-inline: calc(var(--space) * 20);
