--- a/portfolio-app/styles/sections/projects.css
+++ b/portfolio-app/styles/sections/projects.css
@@ -1,6 +1,6 @@
 .description .phrase {
     width: auto;
-    font-size: 4rem;
+    font-size: 5rem;
   }
   
   .description .phrase span {
